--- a/src/app.html
+++ b/src/app.html
@@ -17,8 +17,8 @@
 		<link rel="icon" type="image/png" sizes="96x96" href="/favicons/favicon-96x96.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png" />
 		<link rel="manifest" href="/manifest.json" />
-		<meta name="theme-color" content="#3b3b5f" />
-		<meta name="msapplication-TileColor" content="#3b3b5f" />
+		<meta name="theme-color" content="#6c8ab9" />
+		<meta name="msapplication-TileColor" content="#6c8ab9" />
 		<meta name="msapplication-TileImage" content="/favicons/ms-icon-144x144.png" />
 
 		%sveltekit.head%
